Sistemato il metodo getCurrentCharacterCards